--- a/RiotApp/app/src/main/res/values/strings.xml
+++ b/RiotApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Riot App</string>
+
+    <string name="Select_Region">Select Region</string>
+
+    <string-array name="Regions">
+        <item>North America</item>
+        <item>Europe West</item>
+        <item>Europe East</item>
+        <item>Korea</item>
+        <item>Japan</item>
+        <item>Latin South America</item>
+    </string-array>
 </resources>
