--- a/RiotApp/app/src/main/res/values/strings.xml
+++ b/RiotApp/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <!-- END Strings related to login -->
+
+    <string name="imgLeagueIcon"></string>
 </resources>
